--- a/FLASHCARDS .1/index.html
+++ b/FLASHCARDS .1/index.html
@@ -45,7 +45,7 @@
         rows="3"
         placeholder="Insira a Resposta..."
       ></textarea>
-      <button id="save-btn">Save</button>
+      <button id="save-btn">Guardar</button>
     </div>
     <script src="app.js"></script>
   </body>
