--- a/FLASHCARDS .1/index.html
+++ b/FLASHCARDS .1/index.html
@@ -26,12 +26,12 @@
       <h2>Informações Flashcard</h2>
       <div class="wrapper">
         <div class="error-con">
-          <span class="hide" id="error">ESPAÇOS NÃO PREENCHIDOS!</span>
+          <span class="hide" id="error">Todos os Campos Tem Preenchimeto Obrigatório!</span>
         </div>
         <i class="fa-solid fa-xmark" id="close-btn"></i>
       </div>
 
-      <label for="question">Dúvida:</label>
+      <label for="question">Pergunta:</label>
       <textarea
         class="input"
         id="question"
@@ -49,4 +49,4 @@
     </div>
     <script src="app.js"></script>
   </body>
-</html>
+</html>  <!--this code was made by joaomiguelsv@gmail.com 2024. All Directs Reserved-->
