--- a/QUIZ .1/index.html
+++ b/QUIZ .1/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Day #61 - Api Quiz Game | AsmrProg</title>
+    <title>Api Quiz | Juaum</title>
+    
 </head>
-
 <body>
 
     <div id="quiz-container">
